# shoot-em-up-project

./: .gitignore  CMakeLists.txt  ShootEmUpProject.astyle  ShootEmUpProject.sln  pom.xml
Assets/Definitions/: Application.adf  Application.gdf  Main.sdf
Assets/Proto/: Common.proto  Definition.proto
CMake/: FindBerkelium.cmake  FindLogog.cmake  FindOIS.cmake  FindOISB.cmake  FindOgre.cmake  FindZeroMQ.cmake
Core/: CMakeLists.txt  pom.xml
Core/BaseTypes/: BaseTypes.vcxproj  BaseTypes.vcxproj.filters  CMakeLists.txt  pom.xml
Core/BaseTypes/Source/: Assert.h  BaseTypes.h  Convertor.h  DataTypes.h  Debug.cpp  Debug.h  Defines.h  Errors.h  Hex.h  Logger.cpp  Logger.h  MathUtils.cpp  MathUtils.h  ObjectId.cpp  ObjectId.h  Proto.h  Singleton.cpp  Singleton.h  SpinMutex.h
Core/BaseTypes/Source/System/: Changes.h  Components.h  Types.h
Core/Framework/: CMakeLists.txt  Framework.vcxproj  Framework.vcxproj.filters  pom.xml
Core/Framework/Source/: DebugWindow.cpp  DebugWindow.h  Framework.cpp  Framework.h  Instrumentation.cpp  Instrumentation.h  Main.cpp  Scheduler.cpp  Scheduler.h  ThreadPool.cpp  ThreadPool.h  Universal.cpp  Universal.h
Core/Framework/Source/Debugger/: DebugWindow.cpp  DebugWindow.h  Debugger.cpp  Debugger.h  ObjectChangesDebugger.cpp  ObjectChangesDebugger.h  SceneChangesDebugger.cpp  SceneChangesDebugger.h
Core/Framework/Source/Generic/: Framework.cpp  Framework.h  Instrumentation.h  IttNotify.h  Scheduler.cpp  Scheduler.h  ThreadPool.cpp  ThreadPool.h
Core/Framework/Source/Manager/: ChangeControlManager.cpp  ChangeControlManager.h  ChangeManager.cpp  ChangeManager.h  EnvironmentManager.cpp  EnvironmentManager.h  LogManager.h  ManagerInterfaces.cpp  ManagerInterfaces.h  MemoryManager.cpp  MemoryManager.h  ObserverRequest.h  PlatformManager.cpp  PlatformManager.h  ServiceManager.cpp  ServiceManager.h  SystemManager.cpp  SystemManager.h  TaskManager.cpp  TaskManager.h
Core/Framework/Source/Parser/: DefinitionParser.cpp  DefinitionParser.h
Core/Framework/Source/Service/: DefinitionService.cpp  DefinitionService.h  LogService.cpp  RuntimeService.cpp  RuntimeService.h  SettingService.h  SystemService.h  WindowService.h
Core/Framework/Source/Universal/: UObject.cpp  UObject.h  UScene.cpp  UScene.h
Core/Interfaces/: CMakeLists.txt  Interfaces.vcxproj  Interfaces.vcxproj.filters  pom.xml
Core/Interfaces/Source/: Interface.h  System.h
Core/Interfaces/Source/Generic/: IComponent.h  IEntity.cpp  IEntity.h  IGenericScene.h  IObserver.h  IProperty.cpp  IProperty.h  ISubject.cpp  ISubject.h  IUpdatable.h
Core/Interfaces/Source/Manager/: IChangeManager.h  IEnvironmentManager.h  IManagerInterfaces.h  IPlatformManager.h  IServiceManager.h
Core/Interfaces/Source/Object/: IGeometryObject.h  IKeyboardObject.h  IMoveObject.h  ISceneObject.cpp  ISceneObject.h
Core/Interfaces/Source/Observer/: CSubject.cpp  CSubject.h  IChangeManager.h  IObserver.h  ISubject.cpp  ISubject.h
Core/Interfaces/Source/Property/: IProperty.cpp  IProperty.h
Core/Interfaces/Source/Service/: IEnvironment.h  IPlatform.h  IRuntimeService.h  IService.h  ISettingService.h  ISystemService.h  ITaskManager.h  IWindowService.h
Core/Interfaces/Source/Service/API/: Collision.h
Core/Interfaces/Source/System/: Definitions.h  ISystem.cpp  ISystem.h  ISystemObject.cpp  ISystemObject.h  ISystemScene.cpp  ISystemScene.h  ISystemSubject.cpp  ISystemSubject.h  ISystemTask.cpp  ISystemTask.h  SystemInterface.h
Tools/: encode-definitions.sh  generate-proto.sh
(+178 files in other folders)
